# ferma-medical-information

./: .env  .env.example  README.md  full_abstracts_data_extraction.py  main.py  pyproject.toml  readme.md  requirements.txt
config/: es_query.txt  es_settings.py  full_abstract_extraction.txt  prompt_check_notes.txt  prompt_clinicaldata.txt  prompt_exclusion.txt  prompt_extract.txt  prompt_intro.txt  prompt_keyword.txt  prompt_pi_reference.txt  prompt_reference.txt  prompt_srl.txt  prompt_study.txt  prompt_summary.txt  prompt_title.txt  prompt_trials.txt  prompt_update_notes.txt  settings.py
db/: session.py
helpers/: authentication.py  es_utils.py  google_pub_sub.py  google_storage_bucket.py  logger.py
middlewares/: logger.py
models/: documents.py  users.py
routers/: medical_information.py  users.py
schemas/: medical_info_inquiry.py
services/: azure_doc_intelligence.py  base.py  document_service.py  medical_information_report_builder.py  pubmed_es_service.py  pubmed_service.py  user_service.py
services/modules/: aaas.py  es_parent_module.py  es_structured_search_module.py  es_vector_search_module.py
